--- a/web/offwhite/style.css
+++ b/web/offwhite/style.css
@@ -878,9 +878,22 @@ a.scope            { /* scope              */ color: steelblue; font-weight: bol
     max-height: 400px;
 }
 
-.symbol-highlighted {
+.symbol-highlighted.hightlight-color-1 {
+    /* yellow */
     background-color: #ffd700;
     background-color: rgb(255, 215, 0);
+}
+
+.symbol-highlighted.hightlight-color-2 {
+    /* green */
+    background-color: #00ff00;
+    background-color: rgb(0, 255, 0);
+}
+
+.symbol-highlighted.hightlight-color-3 {
+    /* blue */
+    background-color: #00ccff;
+    background-color: rgb(0, 204, 255);
 }
 
 .messages-window {
