--- a/web/repos.jspf
+++ b/web/repos.jspf
@@ -143,7 +143,7 @@ Copyright (c) 2015, 2017, Oracle and/or its affiliates. All rights reserved.
                     <table>
                     <thead>
                     <tr>
-                    <td><b>Mirror</b></td>
+                    <td><b>Repository</b></td>
                     <td><b>SCM Type: Parent (branch)</b></td>
                     <td><b>Current version</b></td>
                     </tr>
@@ -276,7 +276,7 @@ Copyright (c) 2015, 2017, Oracle and/or its affiliates. All rights reserved.
                         <table>
                         <thead>
                         <tr>
-                        <td><b>Mirror</b></td>
+                        <td><b>Repository</b></td>
                         <td><b>SCM Type: Parent (branch)</b></td>
                         <td><b>Current version</b></td>
                         </tr>
