Updated cursor style when hovering on project "bubble"

--- a/web/default/searchable-option-list-2.0.3.css
+++ b/web/default/searchable-option-list-2.0.3.css
@@ -302,6 +302,7 @@
     padding: 3px 5px;
     display: table-cell;
     vertical-align: top;
+    cursor: default; /* modified 2017 */
 }
 
 .sol-quick-delete {
